@@ -457,7 +457,7 @@ class Album {
 			$changed = 1;
 		}
 
-		if ($this->version <30) {
+		if ($this->version < 30) {
 			if ($this->fields["border"] == 'off') {
 				$this->fields["border"] = 0;
 			}
@@ -472,6 +472,14 @@ class Album {
 			    !isset($this->fields['print_photos']['shutterfly']['checked'])) {
 				unset($this->fields['print_photos']['shutterfly']);
 			}
+		}
+
+		if ($this->version < 34) {
+			if (isset($this->fields['print_photos']['ezprints']['checked'])) {
+			    $this->fields['print_photos']['shutterfly']['checked'] = 'checked';
+			}
+			unset($this->fields['print_photos']['ezprints']);
+			$changed = 1;
 		}
 
 		/* Special case for EXIF :-( */
