@@ -222,9 +222,6 @@ $services = array(
 	'fotokasten'  => array(
 		'name'    => 'Fotokasten',
 		'url'     => 'http://www.fotokasten.de/'),
-	'ezprints'    => array(
-		'name'    => 'EZ Prints',
-		'url'     => 'http://www.ezprints.com/'),
 	'mpush'       => array(
 		'name'	  => 'mPUSH',
 		'url'     => 'http://www.mpush.cc/'),
